k8s/img-board/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: img-board
  labels:
    app: img-board
spec:
  type: ClusterIP
  selector:
    app: img-board
  ports:
    - name: web
      port: 3000
      targetPort: 3000
    - name: server-metrics
      port: 9091
      targetPort: 9091
    - name: preprocessor-metrics
      port: 9092
      targetPort: 9092
