k8s/img-board/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: img-board
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.0.200
  labels:
    app: img-board
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`imgboard.alton.vanlawlabs.com`)
      kind: Rule
      services:
        - name: img-board
          port: 3000
  tls:
    secretName: wildcard-cert
